# projectCPlusPlus

./: CMakeLists.txt  main.cpp
Collision/: Collision.cpp  Collision.h
GameBoard/: GameBoard.cpp  GameBoard.h
Position/: Position.cpp  Position.h
SnakeBody/: SnakeBody.cpp  SnakeBody.h
SnakeHead/: SnakeHead.cpp  SnakeHead.h
Ticks/: Ticks.cpp  Ticks.h
